--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-DB_NAME=dummy
-DB_USERNAME=root
-DB_PASSWORD=123456
-DB_PORT=3306
-DB_HOST=localhost
+# DB_NAME=dummy
+# DB_USERNAME=root
+# DB_PASSWORD=123456
+# DB_PORT=3306
+# DB_HOST=localhost
+
+DB_NAME=bz3kt1eshue1mcutahff
+DB_USERNAME=usxyopnlb7lt8hzu
+DB_PASSWORD=u4PGbo99xCrknxbZrNBZ
+DB_HOST=bz3kt1eshue1mcutahff-mysql.services.clever-cloud.com
