--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@
 # DB_PORT=3306
 # DB_HOST=localhost
 
-DB_NAME=bmdbdoixkeygfihsxug1
-DB_USERNAME=uipjlkapfvp8bhoo
-DB_PASSWORD=5ZrQnvzl18mQruQf93qO
-DB_HOST=bmdbdoixkeygfihsxug1-mysql.services.clever-cloud.com
+DB_NAME=fusiongather
+DB_USERNAME=root
+DB_PASSWORD=123456789
+DB_HOST=34.81.139.152
 DB_PORT=3306
 
 
