--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": "18.17.0"
+    "node": "18.17.0",
+    "npm": "10.3.0"
   },
   "scripts": {
-
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,7 +25,8 @@
     "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "postinstall": "npm run prestart:prod"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
