--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 DB_NAME=fusiongather
 DB_USERNAME=root
-DB_PASSWORD=123456789
+DB_PASSWORD=fusiongathernewgen4346134243
 DB_HOST=34.81.139.152
 DB_PORT=3306
 
