--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "brace-expansion": "^4.0.0",
@@ -42,6 +43,7 @@
     "class-validator": "^0.14.0",
     "config": "^3.3.11",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dateformat": "^5.0.3",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
